# neoproxy

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  pyproject.toml  rustfmt.toml
.claude/: agents  skills
conf/: connect-test.yaml  example.yaml  server.yaml
conf/certs/: client-ca.crt  client-ca.key  client.crt  client.key  generate_certs.sh  server-ca.crt  server-ca.key  server.crt  server.crt.chain  server.key
src/: access_log.rs  assembly.rs  auth.rs  auth_tests.rs  cli.rs  cli_tests.rs  config.rs  config_tests.rs  config_validator.rs  connect_utils.rs  context.rs  context_tests.rs  h3_stream.rs  h3_stream_tests.rs  http_message.rs  http_message_tests.rs  http_types.rs  http_utils.rs  http_utils_tests.rs  listener.rs  listener_tests.rs  listeners.rs  listeners_tests.rs  main.rs  main_tests.rs  plugin.rs  plugin_tests.rs  plugins.rs  plugins_tests.rs  routing.rs  server.rs  server_tests.rs  server_thread.rs  server_thread_tests.rs  service.rs  service_tests.rs  shutdown.rs  shutdown_tests.rs  stream.rs  stream_tests.rs  (+4 more)
src/access_log/: config.rs  context.rs  formatter.rs  writer.rs
src/auth/: application.rs  client_cert_auth.rs  config.rs  error.rs  listener_auth_config.rs  mod.rs  password.rs  tls_cert.rs  transport.rs  user_password_auth.rs
src/config/: access_log.rs  auth.rs  auth_tests.rs  cli.rs  error.rs  error_tests.rs  global.rs  global_tests.rs  listener.rs  listener_tests.rs  listener_validation.rs  listener_validation_conflict_tests.rs  listener_validation_test_support.rs  listener_validation_test_support_tests.rs  listener_validation_tests.rs  service.rs  service_tests.rs  tls.rs  tls_tests.rs  validate.rs  validate_tests.rs
src/listeners/: common.rs  error_response.rs  error_response_tests.rs  fast_socks5.rs  header_validation.rs  header_validation_tests.rs  http.rs  http3.rs  http3_tests.rs  http_service.rs  http_service_tests.rs  http_tests.rs  https.rs  https_tests.rs  hyper.rs  listener_args_fixture.rs  listener_args_fixture_tests.rs  server_fixtures.rs  server_fixtures_tests.rs  socks5.rs  socks5_tests.rs  tcp_bind.rs  tcp_bind_tests.rs  tcp_listener_base.rs  tcp_listener_base_tests.rs  test_helpers.rs  utils.rs
src/listeners/http3/: quic_config.rs  quic_config_tests.rs  recv_body.rs  recv_body_tests.rs  stream_handler.rs  stream_handler_tests.rs
src/listeners/socks5/: command.rs  command_tests.rs  handshake.rs  handshake_tests.rs
src/plugins/: access_log.rs  access_log_tests.rs  auth.rs  auth_tests.rs  connect_tcp.rs  echo.rs  echo_tests.rs  http3_chain.rs  http_upstream.rs  http_upstream_tests.rs  hyper.rs  js_sandbox.rs  js_sandbox_tests.rs  listener_hyper.rs  service_echo.rs  service_http3_chain.rs  service_http3_upstream.rs  tunnel.rs  utils.rs
src/plugins/access_log/: build_log_entry_tests.rs  config.rs  config_tests.rs  context.rs  context_tests.rs  formatter.rs  formatter_tests.rs  layer.rs  layer_tests.rs  plugin_integration_tests.rs  registry.rs  registry_tests.rs  test_utils.rs  tracing_capture.rs  tracing_capture_tests.rs  writer.rs  writer_tests.rs
src/plugins/auth/: auth_type.rs  user_password_auth.rs
src/plugins/connect_tcp/: pool.rs
src/plugins/http3_chain/: config.rs  error.rs  service.rs  tests.rs  upstream.rs
src/plugins/http_upstream/: config.rs  config_tests.rs  error.rs  error_tests.rs  inherit.rs  inherit_tests.rs  service.rs  service_tests.rs  target_parser.rs  target_parser_tests.rs  upstream.rs  upstream_tests.rs
src/plugins/http_upstream/config/: defaults.rs  defaults_tests.rs  raw.rs  raw_tests.rs  resolved.rs  resolved_tests.rs  resolver.rs  resolver_tests.rs  validation.rs  validation_tests.rs
src/plugins/js_sandbox/: config.rs  config_tests.rs  cpu_sandbox.rs  cpu_sandbox_tests.rs  inject_ops.rs  inject_ops_tests.rs  mem_sandbox.rs  mem_sandbox_tests.rs  pool.rs  pool_tests.rs  request.rs  request_tests.rs  sandbox.rs  sandbox_tests.rs  service.rs  service_runtime_tests.rs  service_test_support.rs  service_test_support_tests.rs  service_tests.rs
src/plugins/js_sandbox/deno_ext/: Cargo.toml
src/plugins/js_sandbox/deno_ext/fetch/: 22_http_client.js  26_fetch.js  Cargo.toml  dns.rs  dns_tests.rs  lib.rs  lib_tests.rs  proxy.rs  proxy_tests.rs
src/plugins/js_sandbox/deno_ext/tls/: Cargo.toml  keylog_tests.rs  lib.rs  lib_tests.rs  tls_key.rs  tls_key_tests.rs
src/plugins/js_sandbox/deno_ext/web/: Cargo.toml  blob_tests.rs  console_tests.rs  lib.rs  lib_tests.rs  message_port_tests.rs  stream_resource.rs  stream_resource_tests.rs  url_tests.rs
src/plugins/js_sandbox/deno_ext/webidl/: Cargo.toml  lib.rs  lib_tests.rs
tests/: test_graceful_shutdown.py  test_http_connect.py  test_http_error_response.py
tests/integration/: __init__.py  conftest.py  test_access_log.py  test_cert_config_refactor.py  test_config_validation.py  test_connect_tcp_forward.py  test_graceful_shutdown.py  test_graceful_shutdown_boundary.py  test_graceful_shutdown_full.py  test_h1_h3_consistency.py  test_hostname_conflict.py  test_http3_auth.py  test_http3_chain.py  test_http3_chain_connect_validation.py  test_http3_chain_forward.py  test_http3_chain_per_proxy_auth.py  test_http3_chain_proxy_status.py  test_http3_chain_upstream_pool.py  test_http3_full.py  test_http3_listener.py  test_http_connect.py  test_http_error_response.py  test_http_upstream_http_proxy.py  test_js_sandbox.py  test_layers.py  test_module_refactor_baseline.py  test_monitoring.py  test_monitoring_api.py  test_new_auth_format.py  test_performance.py  test_port_allocation.py  test_proxy_chain.py  test_proxy_status.py  test_sni_certificate_selection.py  test_socks5.py  test_socks5_upgrade.py  test_tunnel_idle_timeout.py  types.py
tests/integration/configs/: h1_h3_consistency.yaml
tests/integration/utils/: __init__.py  certs.py  config_builders.py  helpers.py  http3_client.py  http_echo.py  test_code_quality.py  test_helpers.py  test_http3_client.py
tests/unit/: test_http3_client_utils.py  test_integration_helpers.py
typings/aioquic/asyncio/: client.pyi  protocol.pyi
typings/aioquic/quic/: configuration.pyi
(+14 files in other folders)
