[package]
name = "neoproxy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
bytes = "1.11.0"
clap = { version = "4.5.28", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full", "test-util"] }
http = "1.2.0"
http-body = "1.0.1"
http-body-util = "0.1.2"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
tower = { version = "0.5.2", features = ["full"] }
time = { version = "0.3.4", features = ["local-offset"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["local-time",
  "env-filter"] }
tracing-appender = "0.2"
rustls = { version = "0.23.29", features = ["ring"] }
rustls-pemfile = "2.2.0"
rustls-native-certs = "0.8.2"
tokio-rustls = "0.26"
h3 = "0.0.8"
h3-quinn = { version = "0.0.10", features = ["datagram"] }
quinn = { version = "0.11.9", features = ["qlog", "rustls", "rustls-log"] }
tokio-util = { version = "0.7.17", features = ["io"] }
futures-core = "0.3.31"
local-channel = "0.1.5"
base64 = "0.22"
fast-socks5 = "1.0.0"
subtle = "2"
x509-parser = "0.16"
humantime = "2.1"
byte-unit = { version = "5.1", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
rcgen = "0.13"
futures = "0.3"
