[project]
name = "neoproxy-integration-tests"
version = "0.1.0"
requires-python = ">=3.14"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "requests",
    "PyYAML",
    "aioquic",
    "cryptography",
    "bcrypt",
    "pytest-timeout>=2.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*_tests.py", "test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --timeout=60 --timeout-method=thread"

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
include = ["tests"]
stubPath = "typings"
venvPath = "."
venv = ".venv"
