[workspace]
resolver = "2"
members = [
  "webidl",
  "web",
  "tls",
  "fetch",
]

[workspace.dependencies]
deno_core = { version = "0.401" }
v8 = { version = "149", default-features = false }
deno_error = { version = "0.7" }
deno_path_util = { version = "0.6" }

# Internal fork crates
deno_ext_webidl = { path = "webidl" }
deno_ext_web = { path = "web" }
deno_ext_tls = { path = "tls" }
deno_tls = { path = "tls" }

anyhow = "1"
bytes = "1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
url = { version = "2", features = ["serde"] }
once_cell = "1"
parking_lot = "0.12"
indexmap = "2"
smallvec = "1"
percent-encoding = "2"
base64 = "0.22"
http = "1"
http-body-util = "0.1"
hyper = "1"
hyper-util = "0.1"
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "http2", "ring", "webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
rustls-webpki = "0.102"
webpki-roots = "0.26"
tokio-rustls = "0.26"
hickory-resolver = "0.25"
encoding_rs = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
flate2 = "1"
brotli = "7"
data-url = "0.3"
h2 = "0.4"
ipnet = "2"
tokio-socks = "0.5"
tokio-vsock = "0.7"
tower = { version = "0.5", default-features = false, features = ["retry", "util"] }
tower-http = { version = "0.6", features = ["decompression-br", "decompression-gzip"] }
tower-service = "0.3"
