[package]
name = "deno_ext_fetch"
version = "0.272.0"
edition = "2024"
description = "Fetch API implementation for Deno (forked for neoproxy js_sandbox)"

[lib]
path = "lib.rs"

[dependencies]
base64.workspace = true
bytes.workspace = true
data-url.workspace = true
deno_core.workspace = true
deno_error.workspace = true
deno_tls.workspace = true
h2.workspace = true
hickory-resolver.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-rustls.workspace = true
hyper-util.workspace = true
ipnet.workspace = true
percent-encoding.workspace = true
rustls-webpki.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tokio-socks.workspace = true
tower.workspace = true
tower-http.workspace = true
tower-service.workspace = true

[target.'cfg(any(target_os = "android", target_os = "linux", target_os = "macos"))'.dependencies]
tokio-vsock.workspace = true
